--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,155 @@
+:root {
+  --Soft-Blue: hsl(231, 69%, 60%);
+  --Soft-Red: hsl(0, 94%, 66%);
+
+  --Grayish-Blue: hsl(229, 8%, 60%);
+  --Very-Dark-Blue: hsl(229, 31%, 21%);
+}
+
+body {
+  font-family: "Rubik", sans-serif;
+}
+
+.nav-bar {
+  border: 1px solid transparent;
+  margin: auto;
+  margin-top: 34px;
+  width: 1200px;
+  font-weight: 500;
+}
+.logo img {
+  margin-top: 22px;
+  margin-left: 48px;
+}
+.nav-bar a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--Very-Dark-Blue);
+}
+.nav-bar a:hover {
+  color: var(--Soft-Red);
+}
+.main-nav {
+  display: flex;
+  align-content: flex-end;
+  justify-content: flex-end;
+  list-style-type: none;
+  margin-right: 50px;
+}
+.main-nav_btn a {
+  margin-right: 43px;
+}
+.main-nav li {
+  margin: 10px 0px;
+}
+.main-nav a {
+  border: 2px solid transparent;
+  border-radius: 5px;
+  letter-spacing: 1.3px;
+  font-size: 13px;
+}
+.login_btn a {
+  background-color: var(--Soft-Red);
+  padding: 9px 30px;
+}
+.login_btn a {
+  color: white;
+}
+.login_btn a:hover {
+  cursor: pointer;
+  border: 2px solid var(--Soft-Red);
+  color: var(--Soft-Red);
+  background-color: white;
+}
+
+.container {
+  width: 1440px;
+  border: 1px solid purple;
+  margin: auto;
+}
+.content_container {
+  width: 1300px;
+  margin: auto;
+  border: 1px solid lightsalmon;
+}
+
+.logo_img {
+  float: left;
+}
+
+#main {
+  height: 580px;
+  display: flex;
+}
+.main-text_container {
+  float: left;
+  width: 515px;
+  margin-top: 130px;
+  margin-left: 95px;
+}
+.main-text_container h1 {
+  font-size: 45px;
+  font-weight: 600;
+  letter-spacing: 0.7px;
+}
+.main-text_container p {
+  font-size: 18px;
+  opacity: 0.5;
+  line-height: 27px;
+  margin-top: -5px;
+}
+.main-text_container button {
+  padding: 13px 18px 12px;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-right: 15px;
+}
+.main-text_container button:hover {
+  cursor: pointer;
+}
+.get-chrome_btn {
+  color: white;
+  background-color: var(--Soft-Blue);
+  border: 2px solid var(--Soft-Blue);
+}
+.get-firefox_btn {
+  background-color: lightgray;
+  border: 2px solid lightgray;
+}
+.get-chrome_btn:hover {
+  border: 2px solid var(--Soft-Blue);
+  color: var(--Soft-Blue);
+  background-color: white;
+}
+.get-firefox_btn:hover {
+  border: 2px solid var(--Very-Dark-Blue);
+}
+#main img {
+  position: absolute;
+  top: 190px;
+  right: 285px;
+}
+.decor {
+  position: absolute;
+  width: 510px;
+  height: 330px;
+  background-color: var(--Soft-Blue);
+  border-top-left-radius: 150px;
+  border-bottom-left-radius: 150px;
+  z-index: -10;
+  right: 240px;
+  top: 340px;
+
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
+  position: absolute;
+  bottom: 0px;
+  left: 42%;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
