--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,14 @@
   --Very-Dark-Blue: hsl(229, 31%, 21%);
 }
 
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   font-family: "Rubik", sans-serif;
+  overflow-x: hidden;
 }
 
 .nav-bar {
@@ -29,11 +35,20 @@ body {
 .nav-bar a:hover {
   color: var(--Soft-Red);
 }
+p {
+  opacity: 0.5;
+}
+ul {
+  list-style-type: none;
+}
+button {
+  border-radius: 5px;
+  cursor: pointer;
+}
 .main-nav {
   display: flex;
   align-content: flex-end;
   justify-content: flex-end;
-  list-style-type: none;
   margin-right: 50px;
 }
 .main-nav_btn a {
@@ -51,11 +66,10 @@ body {
 .login_btn a {
   background-color: var(--Soft-Red);
   padding: 9px 30px;
-}
-.login_btn a {
   color: white;
 }
-.login_btn a:hover {
+.login_btn a:hover,
+.contact-us_btn:hover {
   cursor: pointer;
   border: 2px solid var(--Soft-Red);
   color: var(--Soft-Red);
@@ -85,7 +99,7 @@ body {
   float: left;
   width: 515px;
   margin-top: 130px;
-  margin-left: 95px;
+  margin-left: -100px;
 }
 .main-text_container h1 {
   font-size: 45px;
@@ -94,7 +108,6 @@ body {
 }
 .main-text_container p {
   font-size: 18px;
-  opacity: 0.5;
   line-height: 27px;
   margin-top: -5px;
 }
@@ -115,8 +128,8 @@ body {
   border: 2px solid var(--Soft-Blue);
 }
 .get-firefox_btn {
-  background-color: lightgray;
-  border: 2px solid lightgray;
+  background-color: rgb(232, 231, 231);
+  border: 2px solid rgb(232, 231, 231);
 }
 .get-chrome_btn:hover {
   border: 2px solid var(--Soft-Blue);
@@ -128,8 +141,10 @@ body {
 }
 #main img {
   position: absolute;
-  top: 190px;
-  right: 285px;
+  height: 465px;
+  width: 660px;
+  top: 165px;
+  left: 970px;
 }
 .decor {
   position: absolute;
@@ -139,17 +154,244 @@ body {
   border-top-left-radius: 150px;
   border-bottom-left-radius: 150px;
   z-index: -10;
-  right: 240px;
+  left: 1170px;
   top: 340px;
+}
 
+#features {
+  background-color: lightgray;
+  height: 800px;
+  text-align: center;
+}
+#features h2,
+#extension-download h2,
+#faq_section h2 {
+  font-size: 30px;
+  letter-spacing: 1px;
+  margin-top: 100px;
+}
+#features p,
+.extension-download_par,
+#faq_section p {
+  width: 550px;
+  margin: auto;
+  font-size: 18px;
+  opacity: 0.5;
+  line-height: 26px;
+  letter-spacing: 0.2px;
+}
+
+#extension-download {
+  height: 800px;
+  background-color: lightcyan;
+  text-align: center;
+}
+#extension-download p {
+  margin-top: 25px;
+  margin-bottom: 8px;
+}
+.extensions-list {
+  display: flex;
+  justify-content: center;
+}
+.extensions-list li {
+  height: 360px;
+  width: 285px;
+  margin: 18px;
+  background-color: whitesmoke;
+  text-align: center;
+  border-radius: 15px;
+}
+.browser-logo_img {
+  height: 100px;
+  margin-top: 37px;
+}
+.extensions-list h3 {
+  margin-top: 31px;
+}
+.browser-par {
+  font-size: 16px;
+  margin-top: 5px;
+}
+.browser-dots_img {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.extensions-list button {
+  padding: 14px 25px 13px;
+  border: 2px solid var(--Soft-Blue);
+  background-color: var(--Soft-Blue);
+  color: white;
+  font-weight: 500;
+  font-size: 15px;
+}
+.extensions-list button:hover {
+  background-color: white;
+  color: var(--Soft-Blue);
+}
+#chrome-extension {
+  margin-top: 48px;
+}
+#firefox-extension {
+  margin-top: 87px;
+}
+#opera-extension {
+  margin-top: 126px;
+}
+
+#faq_section {
+  text-align: center;
+  height: 900px;
+  background-color: lightpink;
+}
+#faq_section p {
+  margin-top: 30px;
+}
+.faq-accordion {
+  width: 550px;
+  margin: auto;
+  margin-top: 55px;
+  text-align: left;
+}
+.faq-accordion li {
+  padding: 22px 1px;
+}
+.faq-arrow {
+  width: 18px;
+  height: 12px;
+  margin: 5px 15px;
+  float: right;
+  background-image: url("../images/icon-arrow.svg");
+  background-repeat: no-repeat;
+  background-size: 17px;
+  background-position: cover;
+}
+.reversed-arrow {
+  transform: rotate(180deg);
+}
+.faq-question {
+  cursor: pointer;
+  font-size: 19px;
+  font-weight: 400;
+}
+.faq-answer {
+  display: none;
+}
+.more-info_btn {
+  padding: 15px 22px;
+  font-size: 15px;
+  color: white;
+  background-color: var(--Soft-Blue);
+  border: none;
+  margin-top: 50px;
+}
+
+#contact-us {
+  height: 359px;
+  background-color: var(--Soft-Blue);
+  color: white;
+  text-align: center;
+}
+#contact-us h3 {
+  padding-top: 70px;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-weight: 500;
+  font-size: 13px;
+}
+#contact-us h2 {
+  width: 400px;
+  margin: auto;
+  margin-top: 37px;
+  font-weight: 500;
+  font-size: 31px;
+  line-height: 40px;
+}
+.contact-us_form {
+  margin-top: 35px;
+}
+.contact-us_form input {
+  height: 42px;
+  width: 285px;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+.contact-us_btn {
+  background-color: var(--Soft-Red);
+  border: 2px solid var(--Soft-Red);
+  padding: 14px 20px;
+  margin-left: 10px;
+  color: white;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 0.7px;
+}
+footer {
+  height: 90px;
+  background-color: var(--Very-Dark-Blue);
+}
+footer .logo_img {
+  margin-top: 30px;
+  margin-left: 165px;
+  margin-right: 50px;
+}
+.footer-nav {
+  display: flex;
+  align-items: center;
+}
+.footer-nav li {
+  margin-top: 34px;
+  margin-left: 15px;
+}
+.footer-nav a {
+  font-size: 13px;
+  font-weight: 300;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 12px;
+}
+.footer-nav a:hover {
+  color: var(--Soft-Red);
+}
+.socials {
+  display: flex;
+  float: right;
+  margin-top: -28px;
+  margin-right: 158px;
+}
+.facebook_social,
+.twitter_social {
+  height: 35px;
+  width: 35px;
+  margin-left: 29px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.facebook_social {
+  background-image: url(../images/icon-facebook.svg);
+}
+.twitter_social {
+  background-image: url(../images/icon-twitter.svg);
+}
+.facebook_social:hover,
+.twitter_social:hover {
+  cursor: pointer;
+}
+.facebook_social:hover {
+  background-image: url(../images/icon-facebook-hover.svg);
+}
+.twitter_social:hover {
+  background-image: url(../images/icon-twitter-hover.svg);
 }
 
 .attribution {
   font-size: 11px;
   text-align: center;
-  position: absolute;
-  bottom: 0px;
-  left: 42%;
+  padding: 10px;
+  opacity: 1;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
