Features section / page slider (jQuery)

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,19 @@
   margin: 0px;
   padding: 0px;
 }
+a {
+  text-decoration: none;
+}
+p {
+  opacity: 0.5;
+}
+ul {
+  list-style-type: none;
+}
+button {
+  border-radius: 5px;
+  cursor: pointer;
+}
 
 body {
   font-family: "Rubik", sans-serif;
@@ -34,16 +47,6 @@ body {
 }
 .nav-bar a:hover {
   color: var(--Soft-Red);
-}
-p {
-  opacity: 0.5;
-}
-ul {
-  list-style-type: none;
-}
-button {
-  border-radius: 5px;
-  cursor: pointer;
 }
 .main-nav {
   display: flex;
@@ -159,7 +162,7 @@ button {
 }
 
 #features {
-  background-color: lightgray;
+  background-color: lightgreen;
   height: 800px;
   text-align: center;
 }
@@ -170,6 +173,12 @@ button {
   letter-spacing: 1px;
   margin-top: 100px;
 }
+#features h2 {
+  margin-top: 135px;
+}
+#features button {
+  margin-top: 30px;
+}
 #features p,
 .extension-download_par,
 #faq_section p {
@@ -179,6 +188,67 @@ button {
   opacity: 0.5;
   line-height: 26px;
   letter-spacing: 0.2px;
+}
+.nav-bar__paragraph-slider {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+.nav-bar__paragraph-slider a {
+  padding: 25px 38px;
+  margin: 2px;
+  color: black;
+  font-size: 17px;
+  letter-spacing: 0.3px;
+  opacity: 0.5;
+}
+#active {
+  border-bottom: 4px solid var(--Soft-Red);
+  opacity: 1;
+}
+.nav-bar__paragraph-slider a:hover {
+  cursor: pointer;
+  color: var(--Soft-Red);
+  opacity: 1;
+}
+.nav-bar__paragraph-slider h3 {
+  border-bottom: 1px solid lightgray;
+  padding-bottom: 27.5px;
+  font-weight: 400;
+}
+.slider-page_container {
+  margin-left: 0px;
+}
+.slider_page {
+  display: none;
+  text-align: left;
+}
+.active_page {
+  display: block;
+}
+.slider-page_img {
+  float: left;
+  margin-top: -28px;
+  margin-left: 105px;
+}
+.img-part_slider {
+  margin-left: 50px;
+}
+.slider-page_text {
+  margin-left: 770px;
+}
+.intelligent-search_page, .share-bookmarks_page {
+  margin-left: 0px;
+}
+.slider-page_text h2 {
+  font-size: 20px;
+  margin-bottom: 25px;
+}
+.slider_page_text p {
+  width: 100px;
+}
+#features p {
+  line-height: 28px;
 }
 
 #extension-download {
@@ -309,6 +379,8 @@ button {
 }
 .contact-us_form {
   margin-top: 35px;
+  display: flex;
+  justify-content: center;
 }
 .contact-us_form input {
   height: 42px;
@@ -320,13 +392,41 @@ button {
 .contact-us_btn {
   background-color: var(--Soft-Red);
   border: 2px solid var(--Soft-Red);
-  padding: 14px 20px;
+  padding: 12px 20px;
   margin-left: 10px;
   color: white;
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 0.7px;
 }
+.email-error_input {
+  border: 2px solid var(--Soft-Red);
+}
+.email-error_input-icon {
+  position: absolute;
+  margin-top: -33px;
+  margin-left: 265px;
+  height: 20px;
+  width: 20px;
+  background-image: url(../images/icon-error.svg);
+  background-size: cover;
+  display: none;
+}
+.email-error_sign {
+  font-size: 11px;
+  font-style: italic;
+  text-align: left;
+  background-color: var(--Soft-Red);
+  color: white;
+  padding: 10px 4px 7px 10px;
+  width: 285px;
+  margin: auto;
+  margin-top: -4px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  display: none;
+}
+
 footer {
   height: 90px;
   background-color: var(--Very-Dark-Blue);
@@ -390,7 +490,7 @@ footer .logo_img {
 .attribution {
   font-size: 11px;
   text-align: center;
-  padding: 10px;
+  padding-top: 5px;
   opacity: 1;
 }
 .attribution a {
