--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,8 @@ body {
 .slider-page_text {
   margin-left: 770px;
 }
-.intelligent-search_page, .share-bookmarks_page {
+.intelligent-search_page,
+.share-bookmarks_page {
   margin-left: 0px;
 }
 .slider-page_text h2 {
@@ -398,9 +399,7 @@ body {
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 0.7px;
-}
-.email-error_input {
-  border: 2px solid var(--Soft-Red);
+  max-height: 42px;
 }
 .email-error_input-icon {
   position: absolute;
