Mobile/Responsive menu

--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,10 @@ footer .logo_img {
 .respon {
   display: none;
 }
-#mobile-menu_overlay {
+#mobile-logo_overlay {
+  display: none;
+}
+.socials_overlay {
   display: none;
 }
 
@@ -541,25 +544,83 @@ footer .logo_img {
   .logo img {
     margin: 0px;
   }
+  .main-nav {
+    position: absolute;
+    width: 100%;
+    height: 95%;
+    top: -13px;
+    left: 0px;
+    z-index: 59;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 100px;
+    background-color: rgba(24, 50, 87, 0.867);
+  }
+  .main-nav li {
+    width: 300px;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    padding-top: 20px;
+  }
+  .main-nav a {
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-size: 20px;
+    font-weight: 300;
+    letter-spacing: 3px;
+  }
+  .main-nav_btn a {
+    margin: auto;
+  }
+  .login_btn a {
+    background: none;
+    border: 2px solid white;
+  }
+  .login_btn a:hover {
+    background: none;
+  }
+  #mobile-logo_overlay {
+    position: absolute;
+    top: 35px;
+    left: 107px;
+    z-index: 99;
+  }
+  #mobile-menu_close {
+    display: none;
+    position: absolute;
+    right: 107px;
+    top: 40px;
+    width: 16px;
+    height: 15px;
+    z-index: 99;
+  }
+  #mobile-menu_close {
+    cursor: pointer;
+  }
   .mobile-menu_btn {
-    background-image: url('../images/icon-hamburger.svg');
+    background-image: url("../images/icon-hamburger.svg");
     height: 15px;
     width: 18px;
     float: right;
-    margin-top: -45px;
-    margin-right: 875px;
+    margin-top: 7px;
   }
   .mobile-menu_btn:hover {
     cursor: pointer;
   }
-  #mobile-menu_overlay {
+  .socials_overlay {
     position: absolute;
-    display: block;
-    background-color: #242a45da;
+    top: 60%;
+    left: 50%;
+    margin-left: -50px;
+    display: none;
+    width: 100px;
+    z-index: 99;
   }
-  #mobile-menu_overlay a {
-    color: white;
-
+  .socials_overlay .facebook_social,
+  .socials_overlay .socials_overlay {
+    margin: auto;
   }
   .nav-bar {
     height: 120px;
