--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,9 @@ body {
   letter-spacing: 1px;
   margin-top: 100px;
 }
+#faq_section hr {
+  opacity: 0.5;
+}
 #features h2 {
   margin-top: 135px;
   margin-bottom: 25px;
